@@ -1,37 +1,41 @@
 package com.learn.processor;
 
-import com.learn.dao.UserDao;
 import org.apache.ibatis.annotations.Select;
-import org.mybatis.spring.mapper.MapperFactoryBean;
+import org.springframework.beans.factory.FactoryBean;
 
 import java.lang.reflect.Proxy;
 import java.util.Arrays;
-import java.util.List;
+import java.util.Collections;
 
 /**
- * 使用FactoryBean自己创建代理对象，不通过spring创建
+ * 使用FactoryBean自己创建代理对象，不通过spring创建，需要将被创建的对象传进来
  */
-public class MyMapperFactoryBean extends MapperFactoryBean<UserDao> {
+public class MyMapperFactoryBean<T> implements FactoryBean<T> {
+    private Class<T> clazz;
+
+    public MyMapperFactoryBean(Class<T> clazz) {
+        this.clazz = clazz;
+    }
 
     @Override
-    public UserDao getObject() throws Exception {
+    public T getObject() throws Exception {
         // 生成代理对象
-        UserDao dao = (UserDao) Proxy.newProxyInstance(
+        T t = (T) Proxy.newProxyInstance(
                 MyMapperFactoryBean.class.getClassLoader(),
-                new Class[]{UserDao.class},
+                new Class[]{clazz},
                 (proxy, method, args) -> {
                     Select select = method.getAnnotation(Select.class);
                     String[] sqls = select.value();
                     // 执行sql语句
                     System.out.println(Arrays.toString(sqls));
-                    return List.of("sql执行结果");
+                    return Collections.emptyList();
                 }
         );
-        return dao;
+        return t;
     }
 
     @Override
-    public Class<UserDao> getObjectType() {
-        return UserDao.class;
+    public Class<T> getObjectType() {
+        return clazz;
     }
 }
